# oss-taapp

./: .env.example  .gitignore  DESIGN.md  README.md  claude_sessions.json  contributing.md  jira_tokens.db  main.py  openapi-python-client-config-claude.yml  openapi-python-client-config.yaml  openapi-python-client-config.yml  pyproject.toml  test_tokens.db  verify_anthropic.py
.circleci/: config.yml
src/ai_chat_adapter/: README.md  pyproject.toml
src/ai_chat_adapter/src/ai_chat_adapter/: __init__.py  adapter.py
src/ai_chat_adapter/tests/: test_adapter.py
src/ai_chat_service/: README.md  pyproject.toml
src/ai_chat_service/src/ai_chat_service/: __init__.py  auth_deps.py  auth_manager.py  main.py  settings.py  telemetry.py
src/ai_chat_service/tests/: __init__.py  conftest.py  test_auth_deps.py  test_auth_manager.py  test_main.py
src/ai_chat_service_client/: README.md  pyproject.toml
src/ai_chat_service_client/ai_chat_service_client/models/: __init__.py  chat_request.py  chat_request_response_schema_type_0.py  chat_response.py  chat_response_response_type_1.py  health_check_health_get_response_health_check_health_get.py  validation_error.py
src/ai_conversation_api/: README.md  pyproject.toml
src/ai_conversation_api/src/ai_conversation_api/: __init__.py  client.py  message.py  session.py
src/ai_conversation_impl/: README.md  pyproject.toml
src/ai_conversation_impl/src/ai_conversation_impl/: __init__.py  claude_client_impl.py  message_impl.py  session_impl.py  storage.py
src/ai_conversation_service/: README.md  pyproject.toml
src/ai_conversation_service/src/ai_conversation_service/: dependencies.py  main.py  models.py
src/ai_conversation_service/tests/: test_routes.py
src/chat_client_api/: README.md  pyproject.toml
src/chat_client_api/src/chat_client_api/: __init__.py  client.py  exceptions.py  message.py
src/chat_client_api/tests/: __init__.py  test_chat_client_api.py
src/claude_chat_adapter/: README.md  pyproject.toml
src/claude_chat_adapter/src/claude_chat_adapter/: __init__.py  adapter.py  service_adapter.py
src/claude_chat_adapter/tests/: test_adapter.py  test_service_adapter.py
src/claude_chat_api/: README.md  pyproject.toml
src/claude_chat_api/src/claude_chat_api/: __init__.py  api.py  models.py
src/claude_chat_api/tests/: test_claude_chat_api.py
src/claude_chat_impl/: README.md  pyproject.toml
src/claude_chat_impl/src/claude_chat_impl/: __init__.py  auth_manager.py  claude_impl.py  implementation.py  message_impl.py  settings.py  user_key_store.py
src/claude_chat_impl/tests/: __init__.py  conftest.py  test_auth_manager.py  test_claude_impl.py  test_implementation.py  test_message_impl.py  test_registration.py  test_settings.py
src/claude_chat_service/: pyproject.toml
src/claude_chat_service/src/claude_chat_service/: __init__.py  auth_deps.py  main.py
src/claude_chat_service/tests/: __init__.py  conftest.py  test_auth_manager.py  test_implementation.py  test_main.py  test_settings.py
src/claude_chat_service_client/: README.md  pyproject.toml
src/claude_chat_service_client/claude_chat_service_client/models/: __init__.py  claude_key_request.py  message_role.py
src/discord_client_impl/: README.md  pyproject.toml
src/discord_client_impl/src/discord_client_impl/: __init__.py  auth_helper.py  discord_impl.py  message_impl.py
src/discord_client_impl/tests/: test_discord_client.py  test_discord_impl_additional.py  test_message_impl.py  test_registration.py
src/discord_client_service/: README.md  openapi.json  pyproject.toml
src/discord_client_service/src/discord_client_service/: __init__.py  api.py  auth_session.py  service.py
src/discord_client_service/tests/: test_api.py  test_api_errors.py  test_auth_session.py  test_fake_discord.py  test_service_extra.py
src/discord_client_service_client/: README.md  pyproject.toml
src/discord_client_service_client/discord_client_service_client/: __init__.py  client.py  types.py
src/mail_client_adapter/: README.md  __init__.py  pyproject.toml
src/mail_client_adapter/tests/: test_client_adapter.py  test_message_adapter_internals.py  test_register_helper.py
src/mail_client_api/: pyproject.toml
src/mail_client_service/: README.md  pyproject.toml
src/mail_client_service/tests/: test_routes.py
src/mail_client_service_client/: README.md  pyproject.toml
src/slack_adapter/: README.md  pyproject.toml  setup.py
src/slack_adapter/tests/: __init__.py  conftest.py  test_adapter_client_cov.py  test_adapter_client_integration.py  test_adapter_contract.py  test_adapter_cov.py  test_adapter_more_cov.py  test_adapter_service_backed_extra_cov.py
src/slack_api/: README.md  pyproject.toml  setup.py
src/slack_api/tests/: test_client_abc.py  test_contract_imports.py  test_protocol_compliance.py  test_types_roundtrip.py  test_utils.py  test_validators.py
src/slack_impl/: README.md  pyproject.toml  setup.py
src/slack_impl/tests/: test_channels.py  test_health.py  test_oauth_cov.py  test_post_message.py  test_slack_client_cov.py  test_slack_client_online_cov.py  test_token_store.py
src/slack_service/: README.md  pyproject.toml  setup.py
src/slack_service/tests/: test_auth_and_utils_service.py  test_channels_service.py  test_health_service.py  test_openapi.py  test_post_message_service.py
src/smart_chat_bot/: README.md  pyproject.toml
src/smart_chat_bot/tests/: test_e2e_flow.py  test_integration.py  test_integration_flow.py  test_main.py
src/ticket_api/: README.md  pyproject.toml
src/ticket_api/tests/: __init__.py  test_adapter.py  test_api_contract.py  test_edge_cases.py
src/ticket_client_generated/: README.md  pyproject.toml
src/ticket_client_generated/tests/: test_generated_client.py
src/ticket_client_generated/ticket_service_client/: __init__.py
src/ticket_impl/: README.md  pyproject.toml  test_tokens.db
src/ticket_impl/tests/: conftest.py  test_oauth.py  test_storage.py  test_ticket_impl.py
src/ticket_service/: README.md  pyproject.toml
src/ticket_service/tests/: __init__.py  jira_tokens.db  test_endpoints.py  test_ticket_service.py
(+197 files in other folders)
