[project]
name = "ta-assignment"
version = "0.1.0"
description = "Template repository for a mail client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.7.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "google-api-python-client-stubs>=1.30.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "mypy>=1.17.0",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.15.0",
    "respx>=0.21.0",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250611",
]

[tool.uv.workspace]
members = [
  "src/mail_client_api",
  "src/gmail_client_impl",
  "src/mail_client_service",
  "src/mail_client_service_client",
  "src/mail_client_adapter",
  "src/ai_chat_api",
  "src/claude_chat_impl",
  "src/ai_chat_service",
  "src/ai_chat_service_client",
  "src/ai_chat_adapter",
  "src/smart_chat_bot",
  "src/chat_client_api",
  "src/discord_client_impl",
  "src/discord_client_service",
  "src/discord_client_service_client",
  "src/discord_client_service_adapter",
  "src/ticket_api",
  "src/ticket_impl",
]

[tool.ruff]
line-length = 130 # high for top level due to tests
target-version = "py311"
extend-exclude = [
    "src/mail_client_service_client/src/mail_client_service_client",
    "src/ai_chat_service_client/src/ai_chat_service_client",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # `incorrect-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `incorrect-blank-line-before-class`.
    "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
    "S101", # Use of `assert` detected --> Asserts are good in our opinion. Tests use asserts profusely.
    "COM812", # Conflicts with the formatter; safe to ignore when using ruff format
    "TRY301", # Accept direct raises inside try blocks for clearer flow in FastAPI handlers
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "TRY300", "TRY301", "BLE001", "ANN401", "SLF001", "E501", "S105", "ARG001", "ARG002", "S106", "INP001", "PLC0415",
    # Common test relaxations
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "I001",
    "ANN001", "ANN201", "ANN202", "ANN204",
    "PLR2004",
    "PT022",
    "RUF003",
    "EM102", "TRY003",
]
"scripts/*.py" = [
    "INP001",
    "D100", "D103",
    "I001",
    "T201",
    "TRY003", "EM101", "EM102",
]

[tool.mypy]
strict = true
explicit_package_bases = true # Required for src layout
mypy_path = [
    "src/mail_client_api/src",
    "src/gmail_client_impl/src",
    "src/mail_client_service/src",
    "src/mail_client_adapter/src",
    "src/ai_chat_api/src",
    "src/claude_chat_impl/src",
    "src/ai_chat_service/src",
    "src/ai_chat_adapter/src",
    "src/chat_client_api/src",
    "src/discord_client_impl/src",
    "src/discord_client_service/src",
    "src/discord_client_service_client/src",
    "src/discord_client_service_adapter/src",  
    "src/smart_chat_bot/src",
    "src/ticket_api/src",
    "src/ticket_impl/src",
]
exclude = [
  "src/mail_client_service_client/src/mail_client_service_client/.*",
  "src/ai_chat_service_client/src/ai_chat_service_client/.*",
  "src/discord_client_service_client/discord_client_service_client/.*",
  "src/ticket_service_client/src/ticket_service_client/.*",
]
ignore_missing_imports = false
warn_unused_ignores = false

# Allow untyped imports for specific modules
[[tool.mypy.overrides]]
module = [
    "google.*",
    "googleapiclient.*",
    "google_auth_oauthlib.*",
    "anthropic.*",
    "jose.*",
    "pydantic_settings.*",
    "authlib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ai_chat_service_client.*",
    "mail_client_service_client.*",
    "discord_client_service.*",
    "discord_client_service_client.*",
    "discord_client_service_adapter.*",
    "ticket_service.*",
    "ticket_service_client.*",
    "ticket_client_adapter.*",
    "ticket_client_generated.*",
    "ticket_service_client.api.*",
    "ticket_service_client.models.*",
    "ticket_service_client.types.*",
    "dateutil.*",
    "prometheus_client.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "mail_client_adapter.tests.*",
    "mail_client_service.tests.*",
    "ai_chat_adapter.tests.*",
    "ai_chat_api.tests.*",
    "ai_chat_service.tests.*",
    "claude_chat_impl.tests.*",
    "tests.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
pythonpath = [
    ".", 
    "src/mail_client_api/src",
    "src/gmail_client_impl/src",
    "src/mail_client_service/src",
    "src/mail_client_adapter/src",
    "src/ai_chat_api/src",
    "src/claude_chat_impl/src",
    "src/ai_chat_service/src",
    "src/ai_chat_adapter/src",
    "src/chat_client_api/src",
    "src/discord_client_impl/src",
    "src/discord_client_service/src",
    "src/smart_chat_bot/src",
]
testpaths = ["tests", "src/*/tests"]
addopts = ["--cov", "--cov-report=term-missing", "--import-mode=importlib"]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (medium speed, real dependencies)",
    "e2e: marks tests as end-to-end tests (slow, full system)",
    "circleci: marks tests that can run in CI/CD environments without local credentials",
    "local_credentials: marks tests that require local credentials.json or token.json files",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "src/mail_client_service_client/src/mail_client_service_client/*",
    "src/ai_chat_service_client/src/ai_chat_service_client/*",
    "src/discord_client_service_client/discord_client_service_client/*",
]

[tool.coverage.report]
fail_under = 85 # Justification: A high threshold ensures most code is tested.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "openapi-python-client>=0.26.2",
]
