[project]
name = "ai-chat-adapter"
version = "0.1.0"
description = "Adapter that maps the ai_chat_api contract to the AI chat service client."
requires-python = ">=3.11"
dependencies = [
    "ai-chat-api",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_chat_adapter"]

[tool.uv.sources]
ai-chat-api = { workspace = true }
ai-chat-service-api-client = { workspace = true }
