[project]
name = "ai-conversation-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "ai-conversation-api",
    "ai-conversation-impl",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.uv.sources]
ai-conversation-api = { workspace = true }
ai-conversation-impl = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
