[project]
name = "chat-client-api"
version = "0.1.0"
description = "Abstract API contract for chat client implementations (Discord, Slack, etc.)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_client_api"]

[tool.hatch.build.targets.wheel.force-include]
"src/chat_client_api/py.typed" = "chat_client_api/py.typed"

[tool.ruff]
line-length = 100  # Default formatting width
target-version = "py311"  # Adjust based on actual Python version
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []
