[project]
name = "claude-chat-api"
version = "0.1.0"
description = "Abstract API contract for the Claude chat service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_chat_api"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
