[project]
name = "claude-chat-service"
version = "0.1.0"
description = "FastAPI deployment unit for the Claude chat service."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "claude-chat-api",
    "claude-chat-impl",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
claude-chat-api = { workspace = true }
claude-chat-impl = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
