[project]
name = "claude_chat_service_client"
version = "1.0.0"
description = "A client library for accessing Claude Chat Service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.23.0,<0.29.0",
  "attrs>=22.2.0",
  "python-dateutil>=2.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["claude_chat_service_client"]
include = ["CHANGELOG.md", "claude_chat_service_client/py.typed"]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
