[project]
name = "discord-client-service"
version = "0.1.0"
description = "FastAPI service for Discord chat operations with OAuth2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.34.0",
    "discord-client-impl",
    "chat-client-api",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = ["--cov", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_client_service"]

[tool.hatch.build.targets.wheel.force-include]
"src/discord_client_service/py.typed" = "discord_client_service/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../../pyproject.toml"

[tool.ruff.lint]
ignore = []
per-file-ignores = { "**/api.py" = ["SLF001"], "**/tests/**" = ["INP001"] }

[tool.uv.sources]
discord-client-impl = { workspace = true }
chat-client-api = { workspace = true }
