[project]
name = "mail-client-service-client"
version = "0.1.0"
description = "Generated client library for the Mail service FastAPI endpoints."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_client_service_client"]
include = ["src/mail_client_service_client/py.typed"]

[tool.hatch.metadata]
allow-direct-references = true
