[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack_adapter"
version = "0.1.0"
description = "Service-backed Slack Chat Client adapter that implements slack_api.ChatClient via HTTP"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Team 4" }]
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.10",
  "ruff>=0.6",
  "fastapi>=0.110",
]

# ---- setuptools: src/ layout & typed package marker ----
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["slack_adapter*"]

[tool.setuptools.package-data]
slack_adapter = ["py.typed"]

# ---- mypy (package-local) ----
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

# The generated OpenAPI client is brought into sys.path by tests; treat it as external.
[[tool.mypy.overrides]]
module = ["slack_service_client", "slack_service_client.*"]
ignore_missing_imports = true

# ---- Ruff ----
[tool.ruff]
line-length = 100
target-version = "py312"
# exclude noisy cache/metadata paths (package-local)
extend-exclude = [".pytest_cache", "*.egg-info"]

[tool.ruff.lint]
# TA requirement: keep ALL enabled
select = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["slack_adapter", "slack_api"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Tests are allowed pragmatic patterns: asserts, minimal typing, relaxed docstrings, etc.
[tool.ruff.lint.per-file-ignores]
"src/slack_adapter/tests/**.py" = [
  "ANN",     # missing type annotations in tests
  "ARG",     # unused args (e.g., monkeypatch)
  "D",       # docstring rules in tests
  "EM101",   # string literal in exceptions (okay in tests)
  "PLC0415", # import not at top (test helpers)
  "PTH",     # pathlib suggestions in tests
  "PT018",   # “assertion should be broken down”
  "S101",    # assert used
  "SLF001",  # private member access in tests
  "TC002",   # move 3rd-party import into typing-only block
  "TRY003",  # long messages in exceptions
]

# ---- Pytest ----
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
