[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-api"
version = "0.1.0"
description = "Abstract interface and data models for ticketing microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_api"]

[tool.hatch.build.targets.wheel.force-include]
"src/ticket_api/py.typed" = "ticket_api/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.uv.sources]
# No external sources; consumed by workspace members like ticket-impl.
