[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-service-client"
version = "0.1.0"
description = "A client library for accessing Ticket Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ticket_service_client"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
