[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-service"
version = "0.1.0"
description = "Implementation of ticketing microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "ticket-api",
]

[tool.uv.sources]
ticket-api = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_service"]

[tool.hatch.build.targets.wheel.force-include]
"src/ticket_service/py.typed" = "ticket_service/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/ticket_service/telemetry.py" = ["TRY300"]  # Return in try block is intentional for middleware
ignore = ["D100", "D104"]  # Ignore missing docstrings for now